* don't create any RRD files if running as a CGI -- niko
* Curl timeouts work better now -- niko, reported by Chris Wilson <chris *aidworld.org>
* Curl User-Agent string doesn't need quotes anymore -- niko
* check at startup that existing RRD files conform to the config specifications -- niko
* 3 pings is the official minimum now -- niko
* graph fixes for small numbers of pings -- niko, reported by Chris Wilson <chris *aidworld.org>
* fix the LDAP probe killing the CGI with perl <5.6 -- niko, reported by Peter Farmer <pfarmer *hashbang.org.uk>
* make the LDAP probe work withouth IO::Socket::SSL -- niko
* matchers start with a capital letter now -- niko
* new probe programming interface -- niko
 - more strict config file checking giving helpful error messages when necessary
 - generate probe documentation automatically from the code
 - eliminate PROBE_CONF sections
 - several minor incompatible probe changes; see the smokeping_upgrade document for details 
* allow target-specific vars get defaults from Probes section -- niko
* timeout fixes in basefork.pm -- niko
* config file examples and smokeping_examples document -- niko
* documentation updates and reorganizing -- niko
* move all smokeping-specific perl modules into the Smokeping namespace -- niko
* new commandline options '--config=X' and '--check' -- niko
* FPing: support "-t", "-p" and "-i" fping params -- niko, suggested by Chris Wilson <chris *aidworld.org>
* FPing6: test against ::1 instead of localhost -- Sebastian Wiesinger <smokeping *tracker.fire-world.de>
* fix for basefork.pm IO::Select property has_exception is very platform dependent
  by ignoring it altogether things actually work better. Especially on Solaris which
  does have propper support for has_exception as oposed to linux. -- niko, reported by Jim Morris <wrdnet *earthlink.net> 
  
2005/1/30 -- 1.38

* fixed error messages for environments with mixed ipv6 and ipv4 setups  -- Peter W. Osel <pwo *Infineon.COM>