@@ -5,5 +5,5 @@ Contributors
 
 * Niko Tyni <ntyni@iki.fi>  => Many Patches
 * Simon Leinen  <leinen@switch.ch>  => SNMP_Session.pm
-* David Schweikert <dws@ee.ethz.ch> => ISG::ParseConfig.pm
+* David Schweikert <dws@ee.ethz.ch> => Config::Grammar
 * Jack Cummings <jack@mudshark.org> => Proper graphs with pings > 10s. 
